setup all logging
