# packages/ml_api/api/controller.py
@@ -1,15 +1,12 @@
-from flask import request, jsonify
+from flask import request, jsonify, Response
 from gradient_boosting_model.predict import make_prediction
+
+import json
 
 
 def health():
     if request.method == 'GET':
         return jsonify({'status': 'ok'})
-
-
-def version():
-    if request.method == 'GET':
-        return jsonify({'api_version': 'ok'})
 
 
 def predict():
@@ -20,12 +17,17 @@ def predict():
         # Step 2: Access the model prediction function (also validates data)
         result = make_prediction(input_data=json_data)
 
-        # Step 3: Split out results
+        # Step 3: Handle errors
+        errors = result.get('errors')
+        if errors:
+            return Response(json.dumps(errors), status=400)
+
+        # Step 4: Split out results
         predictions = result.get('predictions').tolist()
         version = result.get('version')
-        errors = result.get('errors')
 
-        # Step 4: Return the response as JSON
-        return jsonify({'predictions': predictions,
-                        'version': version,
-                        'errors': errors})
+        # Step 5: Prepare prediction response
+        return jsonify(
+            {'predictions': predictions,
+             'version': version,
+             'errors': errors})
